la app funciona

--- a/static/styles.css
+++ b/static/styles.css
@@ -6,12 +6,12 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #2b058c;
+    background-color: #058c3b;
 }
 .container {
     width: 300px;
     padding: 20px;
-    background-color: #5260a7;
+    background-color: #142b9b;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
