--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <!--img src="img/logo.jpg", alt="logo"-->
         <h2>Login</h2>
         <form action="/login" method="post">
             <div class="form-group">
