--- a/templates/index.html
+++ b/templates/index.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="{{ url_for('static', path='styles.css') }}">
 </head>
 <body>
-    <div class="container">
-        <!--img src="img/logo.jpg", alt="logo"-->
-        <h2>Login</h2>
-        <form action="/login" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn-submit">Login</button>
-        </form>
+
+    <div class="login-box">
+      <img src="../static/logo.jpg" class="avatar" alt="Avatar Image">
+      <h1>Login Here</h1>
+      <form action="/login" method="post">
+        <!-- USERNAME INPUT -->
+        <label for="username">Username</label>
+        <input type="text" placeholder="Enter Username" name="username">
+        <!-- PASSWORD INPUT -->
+        <label for="password">Password</label>
+        <input type="password" placeholder="Enter Password" name="password">
+        <input type="submit" value="Log In">
+        <a href="#">Lost your Password?</a><br>
+        <a href="#">Don't have An account?</a>
+      </form>
     </div>
 </body>
 </html>
